<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Recipe Book</string>
    <string name="action_settings">Settings</string>
    <string name="title">Recipe Book</string>
    <string name="new_recipe">New Recipe</string>
    <string name="view_recipes">View Recipes</string>
    <string name="export_database">Export Database</string>
    <string name="import_database">Import Database</string>
    <string name="export_recipes">Export Recipes</string>
    <string name="export_recipe">Export Recipe</string>
    <string name="title_activity_add_ingredients">Add Ingredients</string>
    <string name="hello_world">Hello world!</string>
    <string name="ingredient_hint">New Ingredient&#8230;</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="direction_hint">New Direction&#8230;</string>
    <string name="add_direction">Add Direction</string>
    <string name="next">Next</string>
    <string name="plus_sign">+</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="Update">Update</string>
    <string name="edit_ingredient">Edit Ingredient</string>
    <string name="edit_direction">Edit Direction</string>
    <string name="delete_ingredient_dialog_title">Delete Ingredient</string>
    <string name="delete_ingredient_dialog_desc">Do you want to delete this ingredient?</string>
    <string name="delete_direction_dialog_title">Delete Direction</string>
    <string name="delete_direction_dialog_desc">Do you want to delete this direction?</string>
    <string name="import_database_dialog_title">Delete Direction</string>
    <string name="import_database_dialog_desc">Do you want to add to or replace your database?</string>
    <string name="add_to">Add To</string>
    <string name="add">Add</string>
    <string name="replace">Replace</string>
    <string name="recipes_imported">Your recipes have been imported.</string>
    <string name="title_activity_add_directions">Add Directions</string>
    <string name="direction_required">You need to first add a direction.</string>
    <string name="ingredient_required">You need to first add an ingredient.</string>
    <string name="name_hint">Recipe Name&#8230;</string>
    <string name="name_required">You need to first add a recipe name.</string>
    <string name="continue_tag">Continue</string>
    <string name="finish">Finish</string>
    <string name="title_activity_name_recipe">Name Recipe</string>
    <string name="appetizer_radio">Appetizer</string>
    <string name="entree_radio">Entree</string>
    <string name="soup_radio">Soup</string>
    <string name="dessert_radio">Dessert</string>
    <string name="title_activity_view_recipes">View Recipes</string>
    <string name="title_activity_recipe_details">Recipe Details</string>
    <string name="ingredients">Ingredients</string>
    <string name="directions">Directions</string>
    <string name="delete_recipe_dialog_desc">Do you want to delete this recipe?</string>
    <string name="delete_recipe_dialog_title">Delete Recipe</string>
    <string name="update_recipe">Update Recipe</string>
    <string name="email_recipe">Email Recipe</string>
    <string name="email_recipe_desc">How would you like to send this email?</string>
    <string name="email_as_db">As a Database</string>
    <string name="email_as_text">As Text</string>
    <string name="email_recipes">Email Recipes</string>
    <string name="error_opening_file">There was an error opening the file. Make sure you selected the recipes.db file that was previously exported from this app.</string>
    <string name="email_database">Email Database</string>
    <string name="no_email_handler">Sorry, you don\'t have any applications that can handle this action. Make sure you have an email client installed.</string>
    <string name="no_file_handler">Sorry, you don\'t have any applications that can handle this action. Make sure you have a file explorer app installed.</string>
    <string name="voice_input">Voice input</string>
    <string name="read_recipe">Read Recipe</string>
    <string name="need_recipes">You must have some saved recipes to do that! Create some recipes first, then try again.</string>

</resources>
