<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <EditText 
        android:id="@+id/enter_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"
        android:layout_marginBottom="10dp"/>
    <RadioGroup 
        android:id="@+id/category_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">
        <RadioButton 
            android:id="@+id/appetizer_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/appetizer_radio" />
        <RadioButton 
            android:id="@+id/entree_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/entree_radio" />
        <RadioButton 
            android:id="@+id/soup_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/soup_radio" />
         <RadioButton 
            android:id="@+id/dessert_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dessert_radio" />
        </RadioGroup>
    <Button 
        android:id="@+id/nextIngredients"
        android:onClick="nextIngredients"
        style="@style/buttonStyle"
        android:text="@string/next"/>
    
</LinearLayout>