<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">
		
		<EditText 
	        android:id="@+id/enter_ingredient"
	        android:layout_weight=".85"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:inputType="text"
	        android:hint="@string/ingredient_hint"/>

		    <Button
		        android:id="@+id/add_ingredient"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight=".15"
		        android:text="@string/plus_sign"
		        android:textStyle="bold"
		        android:onClick="addIngredient"
		        style="@style/smallButtonStyle" />
		
    </LinearLayout>
    
    
    <ListView
        android:id="@+id/ingredient_list"
        android:layout_width="match_parent"
        android:layout_height="200dp" 
        android:layout_marginBottom="15dp">
		    
    </ListView>

    <Button
        android:id="@+id/next_directions"
        style="@style/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next" />

</LinearLayout>
